compare endpoint add
